crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_root_long.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"--help\"])"
---
$ engramdb --help
exit: 0
--- stdout ---
Project-scoped memory store for coding agents

Usage: engramdb [OPTIONS] <COMMAND>

Commands:
  init         Initialize a new EngramDB store
  add          Add a new memory
  get          Get a memory by ID
  query        Query memories (unified ranked / filtered retrieval)
  list         List all memories
  update       Update an existing memory
  delete       Delete a memory
  task         Task lifecycle: declare or complete the task this session works on
  verify       Confirm a memory is still accurate (stamps verified_at; clears doctor-flagged needs_review)
  config       Show effective config values, thresholds, and the store's top tags
  stats        Show statistics
  doctor       Check environment and store health
  projects     Manage registered EngramDB projects
  groups       Manage multi-project memory groups and this project's subscriptions
  challenge    Challenge a memory's validity
  gc           Run garbage collection on low-relevance memories
  compress     List compression candidates (actual compression requires MCP mode)
  serve        Start the MCP server
  daemon       Run the shared embedding daemon (normally auto-spawned by MCP)
  completions  Generate shell completions
  migrate      Migrate memory files to the latest format version
  rollback     Roll back memory files to a previous format version
  reindex      Rebuild index and re-embed memories
  hook         Claude Code plugin hook handler
  setup        Set up Claude Code integration (hooks, MCP, ENGRAM.md, CLAUDE.md)
  review       Interactive review of challenged/stale memories
  help         Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
--- stderr ---
