crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_version.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"--version\"])"
---
$ engramdb --version
exit: 0
--- stdout ---
engramdb [VERSION]
--- stderr ---
